--- a/package.json
+++ b/package.json
@@ -17,29 +17,29 @@
     "type": "git",
     "url": "https://github.com/craigshoemaker/angular-upgrade-demo.git"
   },
-  "dependencies": {
-    "@angular/common": "2.0.0-rc.2",
-    "@angular/compiler": "2.0.0-rc.2",
-    "@angular/core": "2.0.0-rc.2",
-    "@angular/http": "2.0.0-rc.2",
-    "@angular/platform-browser": "2.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.2",
+    "dependencies": {
+    "@angular/common": "2.4.3",
+    "@angular/compiler": "2.4.3",
+    "@angular/core": "2.4.3",
+    "@angular/http": "2.4.3",
+    "@angular/platform-browser": "2.4.3",
+    "@angular/platform-browser-dynamic": "2.4.3",
+    "@angular/upgrade": "2.4.3",
     "angular": "^1.5.6",
     "angular-resource": "^1.5.7",
     "angular-route": "^1.5.7",
-    "angular2-in-memory-web-api": "0.0.7",
+    "angular2-in-memory-web-api": "0.0.21",
     "bootstrap": "^3.3.6",
-    "es6-shim": "^0.35.0",
+    "es6-shim": "^0.35.2",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.6.12"
+    "rxjs": "^5.0.1",
+    "systemjs": "0.19.41",
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.2.0",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.0"
+    "concurrently": "^3.1.0",
+    "lite-server": "^2.2.2",
+    "typescript": "~2.1.5",
+    "typings": "^2.1.0"
   }
 }
